Updates from Overleaf

--- a/IPCookbook.tex
+++ b/IPCookbook.tex
@@ -33,7 +33,7 @@
         \begin{tabular*}{\columnwidth}{@{\extracolsep{\fill}}l r }
             $\alpha$ &  (lower case) scalar \\
             $\alpha^*$ & complex conjugate of $\alpha$\\
-            $\V{x} \in \Complexes^N$ &  (boldface lower case) complex \\
+            $\V{x} \in \Complexes^N$ &  (boldface lower case) complex vector\\
             $N$ &   (upper case) cardinal (number of elements)\\
             $\M{H} \in \Complexes^{N\times M}$ & (boldface upper case) linear operator (matrix) \\%  $\Complexes^N \to \Complexes^M$\\
             $f: \Complexes^N \to \Complexes^M $ & (lower case) function  \\
