Updates from Overleaf

--- a/IPCookbook.tex
+++ b/IPCookbook.tex
@@ -200,7 +200,9 @@ a_0&0&0&\dots &0\\
     \end{itemize}
     \end{block}
 
-    \begin{block}{Woodbury identity}
+    \begin{block}{Inversion lemmas \& Woodbury identity}
+    $ \M{B}^{-1}\M{V} \left(\M{A} - \M{U}\M{B}^{-1}\M{V}\right)^{-1} = \left( \M{B} - \M{V}\M{A}^{-1}\M{U}\right)^{-1}\M{V}\M{A}^{-1}$\\
+    $  \left(\M{A} - \M{U}\M{B}^{-1}\M{V}\right)^{-1}\M{U}\M{B}^{-1} = \M{A}^{-1}\M{U}\left( \M{B} - \M{V}\M{A}^{-1}\M{U}\right)^{-1}$\\
     $\left(\M{A} + \M{U}\,\M{B}\,\M{V} \right)^{-1} = \M{A}^{-1} - \M{A}^{-1}\,\M{U}\left( \M{B}^{-1} + \M{V}\,\M{A}^{-1}\,\M{U}\right)^{-1}\,\M{V}\,\M{A}^{-1}$
     \end{block}
     
