--- a/IPCookbook.tex
+++ b/IPCookbook.tex
@@ -250,7 +250,7 @@ a_0&0&0&\dots &0\\
         $\partial\left( \M{A}\,\M{B}\right) =\left( \partial\M{A}\right) \, \M{B} +  \M{A}\, \left(\partial\M{B}\right)$  &  \\
         $\partial\left( \M{A}^{-1}\right) = -\M{A}^{-1}\left( \partial\M{A}\right)\,\M{A}^{-1}$ &  \\
         $\partial\left( \M{A}\T\right) = \left( \partial\M{A}\right)\T$ &  \\
-        $\PDer{\V{x}\T\V{y}}{\V{x}} = \PDer{\V{y}\T\V{x}}{\V{x}} = \V{x} $&\\
+        $\PDer{\V{x}\T\V{y}}{\V{x}} = \PDer{\V{y}\T\V{x}}{\V{x}} = \V{y} $&\\
         $\PDer{\V{x}\T\M{A}\V{x}}{\V{x}} = \left(\M{A} + \M{A}\T\right) \V{x} $&    \\
    %     $\PDer{f\comp g}{x} =\left( \PDer{f}{x}\comp g \right)\, \PDer{g}{\V{x}}$ & chain rule\\
    %     $\PDer{f\comp g(\V{x})}{\V{x}} = \sum_m^M  \PDer{f}{\left[g(\V{x})\right]_m}\, \PDer{\left[g(\V{x})\right]_m}{\V{x}}$ & chain rule\\
