Fix  a typo in Bayes theorem;-), thanks JFG!

--- a/IPCookbook.tex
+++ b/IPCookbook.tex
@@ -342,14 +342,14 @@ a_0&0&0&\dots &0\\
         \begin{tabular*}{\columnwidth}{@{\extracolsep{\fill}}l r }
         $ \Pr(X\Given Y) =  \Pr(X)$ & Independence \\
         $ f_{X,Y}(\V{x},\V{y}) = f_X(\V{x})\, f_Y(\V{y})$ & Independence\\
-         $\Cov\left(\alpha\,\V{x} +\beta\,\V{y} + \gamma\right) = \alpha^2\,\Cov\left(\V{x}\right) +\beta^2\,\Cov\left(\V{y} \right)$ & Independence\\
+         $\Cov\left(\alpha\,\V{x} +\beta\,\V{y} + \gamma\right) = \alpha^2\,\Cov\left(\V{x}\right) +\beta^2\,\Cov\left(\V{y} \right)$ & Uncorrelation\\
         $ \Cov\left(\V{x},\V{y}\right) = 0 $ & Uncorrelation \\
         \end{tabular*}}
       {\tablinesep=1.1ex
         \begin{tabular*}{\columnwidth}{@{\extracolsep{\fill}}l r }
         independence $\Rightarrow$ uncorrelation & 
         uncorrelation $\nRightarrow$ independence  \\
-        $  \Pr(X\Given Y) =  \frac{\Pr(Y\Given X)\,\Pr(Y) }{\Pr(Y) }$& Bayes rule
+        $  \Pr(X\Given Y) =  \frac{\Pr(Y\Given X)\,\Pr(X) }{\Pr(Y) }$& Bayes rule
         \end{tabular*}}\vspace{-1ex}
     \end{block}
     
