Updates from Overleaf

--- a/preamble.tex
+++ b/preamble.tex
@@ -154,3 +154,19 @@
 \newcommand{\bydef}{\stackrel{\text{\tiny def}}{=}}
 
 \newcommand\BesselJ[1]{\mathop{\mathrm{J}}\nolimits_{#1}}
+
+
+\renewcommand{\Re}{\MathFunc{Re}}        % real part
+\renewcommand{\Im}{\MathFunc{Im}}        % imaginary part
+
+
+\newcommand{\Eq}[1]{Eq.~(\ref{#1})}
+\newcommand{\Fig}[1]{Fig.~\ref{#1}}
+
+
+% Common abbreviation:
+\newcommand{\cf}{\emph{cf.}\xspace}
+\newcommand{\eg}{\emph{e.g.}\xspace}
+\newcommand{\ie}{\emph{i.e.}\xspace} \newcommand{\etal}{\emph{et
+    al.}\xspace} \newcommand{\etc}{\emph{etc.}\xspace}
+\newcommand{\wrt}{with respect to\xspace}
